<resources>
    <string name="app_name">Cadastro</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="telefone">Telefone</string>
    <string name="exemplotelefone">Ex.: 12-93456-7890</string>
    <string name="email">E-mail</string>
    <string name="ingressar_na_lista_de_e_mail">Ingressar na lista de e-mail</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="cidade">cidade</string>
    <string name="uf">UF</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string-array name="opcoes">
        <item>BA</item>
        <item>SP</item>
        <item>MG</item>
        <item>GO</item>
    </string-array>

</resources>