<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Formulario">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:layout_marginHorizontal="3dp"
        android:text="@string/nome_completo" />

    <EditText
        android:id="@+id/inputNomeCompletoEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/bordar_arredondada"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:layout_marginHorizontal="3dp"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/inputNumeroTelefoneEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordar_arredondada"
        android:layout_marginHorizontal="5dp"
        android:ems="10"
        android:hint="@string/exemplotelefone"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:layout_marginHorizontal="3dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/inputEmailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/bordar_arredondada"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <CheckBox
        android:id="@+id/inputemailCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingressar_na_lista_de_e_mail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:text="@string/sexo" />

    <RadioGroup
        android:id="@+id/inputSexoRb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/inputSexoMasculinoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/inputSexoFemininoRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/feminino" />
    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:layout_marginHorizontal="3dp"
        android:text="@string/cidade" />

    <EditText
        android:id="@+id/inputCidadeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/bordar_arredondada"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:layout_marginHorizontal="3dp"
        android:text="@string/uf" />

    <Spinner
        android:id="@+id/inputUfSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opcoes"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:text="@string/limpar"
            android:onClick="limpar"/>

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:text="@string/salvar"
            android:onClick="exibir"/>

    </LinearLayout>


</LinearLayout>